// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен нарисовать VinReportValidatorFileUploader 1`] = `
<div
  className="VinReportValidatorFileUploader"
>
  <Button
    color="transparentBlue"
    disabled={false}
    onClick={[Function]}
    size="l"
    type="button"
    width="default"
  >
    Загрузить файлы
  </Button>
  <div
    className="VinReportValidatorFileUploader__description"
  >
    <div
      className="VinReportValidatorFileUploader__fileName"
    >
      1 файл
      <IconSvg
        className="VinReportValidatorFileUploader__closer"
        id="svgID"
        onClick={[MockFunction]}
        size="24"
      />
    </div>
    <div
      className="VinReportValidatorFileUploader__loaderWrapper"
    >
      <LoaderBar
        className="VinReportValidatorFileUploader__loader"
        color="blue"
        isLoading={false}
      />
    </div>
    <div
      className="VinReportValidatorFileUploader__status VinReportValidatorFileUploader__status_error"
    >
      Размер файла до 40МБ, форматы: XML, JSON, CSV
    </div>
  </div>
  <input
    accept=".xml,.csv,.json,.zip"
    className="VinReportValidatorFileUploader__fileInput"
    multiple={true}
    onChange={[MockFunction]}
    type="file"
  />
</div>
`;

exports[`должен нарисовать VinReportValidatorFileUploader с ошибкой, если что-то пошло не так 1`] = `
<div
  className="VinReportValidatorFileUploader"
>
  <Button
    color="transparentBlue"
    disabled={false}
    onClick={[Function]}
    size="l"
    type="button"
    width="default"
  >
    Загрузить файлы
  </Button>
  <div
    className="VinReportValidatorFileUploader__description"
  >
    <div
      className="VinReportValidatorFileUploader__fileName"
    >
      1 файл
      <IconSvg
        className="VinReportValidatorFileUploader__closer"
        id="svgID"
        onClick={[MockFunction]}
        size="24"
      />
    </div>
    <div
      className="VinReportValidatorFileUploader__loaderWrapper"
    >
      <LoaderBar
        className="VinReportValidatorFileUploader__loader"
        color="blue"
        isLoading={false}
      />
    </div>
    <div
      className="VinReportValidatorFileUploader__status VinReportValidatorFileUploader__status_error"
    >
      Что-то пошло не так
    </div>
  </div>
  <input
    accept=".xml,.csv,.json,.zip"
    className="VinReportValidatorFileUploader__fileInput"
    multiple={true}
    onChange={[MockFunction]}
    type="file"
  />
</div>
`;

exports[`должен нарисовать VinReportValidatorFileUploader, во время загрузки файла 1`] = `
<div
  className="VinReportValidatorFileUploader"
>
  <Button
    color="transparentBlue"
    disabled={true}
    onClick={[Function]}
    size="l"
    type="button"
    width="default"
  >
    Загрузить файлы
  </Button>
  <div
    className="VinReportValidatorFileUploader__description"
  >
    <div
      className="VinReportValidatorFileUploader__fileName"
    >
      1 файл
    </div>
    <div
      className="VinReportValidatorFileUploader__loaderWrapper VinReportValidatorFileUploader__loaderWrapper_visible"
    >
      <LoaderBar
        className="VinReportValidatorFileUploader__loader"
        color="blue"
        isLoading={true}
      />
    </div>
  </div>
  <input
    accept=".xml,.csv,.json,.zip"
    className="VinReportValidatorFileUploader__fileInput"
    multiple={true}
    onChange={[MockFunction]}
    type="file"
  />
</div>
`;
